[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/arial.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://SpamRace/S&K.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="Game_Time" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="YSort" type="YSort" parent="."]

[node name="GameOverDialog" type="ConfirmationDialog" parent="YSort"]
margin_left = 412.0
margin_top = 300.0
margin_right = 612.0
margin_bottom = 370.0
window_title = "Game Over"

[node name="Divider" type="ColorRect" parent="YSort"]
margin_left = 500.0
margin_top = 61.0
margin_right = 512.0
margin_bottom = 600.0
color = Color( 0.984314, 0.858824, 0.858824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="YSort"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 1, 0.333333, 0.333333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labels" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="S" type="Label" parent="Labels"]
margin_left = 220.0
margin_right = 260.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.984314, 0.858824, 0.858824, 1 )
text = "S"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="K" type="Label" parent="Labels"]
margin_left = 736.0
margin_right = 776.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.984314, 0.858824, 0.858824, 1 )
text = "K"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Label" parent="Labels"]
margin_left = 477.45
margin_right = 531.45
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.984314, 0.858824, 0.858824, 1 )
text = "15"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="S_Count" type="Label" parent="Labels"]
margin_left = 191.119
margin_top = 260.0
margin_right = 231.119
margin_bottom = 315.0
rect_scale = Vector2( 2.5, 2.5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.984314, 0.858824, 0.858824, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="K_Count" type="Label" parent="Labels"]
margin_left = 710.0
margin_top = 260.0
margin_right = 750.0
margin_bottom = 315.0
rect_scale = Vector2( 2.5, 2.5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.984314, 0.858824, 0.858824, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Game_Time" to="." method="_on_Game_Time_timeout"]
[connection signal="confirmed" from="YSort/GameOverDialog" to="." method="restart_game"]
